<resources>
    <string name="app_name">Puc Content</string>
    <string name="access_all_the_puc_at_one_place">Access All The Puc Material At One Place</string>
    <string name="sign_in_with_your_college_mail_to_continue">Sign In With Your College Mail To Continue</string>
    <string name="verify_text">Email is required to verify that you belong to rgukt \n This app doesn\'t collect any kind of user data</string>
    <string name="recent_updates">Recent Updates</string>
    <string name="quick_access">Quick Access</string>
    <string name="let_s_study">Let\'s Study</string>
    <string name="logout">LogOut</string>
    <string name="add_file">Add File</string>
    <string name="add_files_to_database">Add Files To DataBase</string>
    <string name="warning">Note : If you are adding new chapter then do not select any chapter in the list</string>
    <string name="info"> &#128578; Items will be added soon</string>
    <string name="contact">Contact</string>
    <string name="semester">Semester :</string>
    <string name="subject">Subject :</string>
    <string name="chapter">Chapter :</string>
    <string name="or_add_new_chapter">Or add new chapter</string>
    <string name="chapter_name_here">Chapter name here</string>
    <string name="delete_pdf_section">Delete Pdf Section</string>
    <string name="delete_selected_pdf">Delete Selected Pdf</string>
    <string name="enter_pdf_title_here">Enter pdf title here</string>
    <string name="paste_pdf_url_here">Paste pdf url here</string>
    <string name="upload">Upload</string>
    <string name="about">About</string>
    <string name="privacy_policy">->Puc Content App is developed independently by students and doesn\'t belong to Rgukt \n->Content used in the app is not owned by the app,it is licenced to their respective writers/owners \n->This app is made to help puc students by providing the content in a structured format and not meant to be used for any commercial purposes \n->PucContent app is completely free and will remain free forever</string>
    <string name="privacy_policy_header">Privacy Policy</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="addquickaccess_info">Tap on the pdf icon to \n add it to  Quick Access</string>
    <string name="checkout_more_apps_made_by_me">Checkout More Apps Made By Me</string>
    <string name="clientId">10752488152-0rqc9231uucn7p5q8bbdkoft5d44fn71.apps.googleusercontent.com</string>
    <string name="offline">You are offline</string>
    <string name="mb">- - mb</string>
    <string name="share">Share</string>
    <string name="extract">Extract</string>
    <string name="interstitialAd">ca-app-pub-5198941761547304/1105695971</string>
    <string name="appOpenAd">ca-app-pub-5198941761547304/4874809776</string>
    <string-array name="semesters">
        <item>Puc-1 Sem-1</item>
        <item>Puc-1 Sem-2</item>
        <item>Puc-2 Sem-1</item>
        <item>Puc-2 Sem-2</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_with">Open with ...</string>
    <string name="join_discord_group">Join Discord Group</string>
    <string name="support_text">Help us to maintain servers by watching a short video ad.\n We gain server charges you gain reputation.</string>
</resources>