<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddToDataBase"
    android:background="@color/white"
    >
    <TextView
        android:elevation="20dp"
        android:id="@+id/header"
        android:background="@drawable/data_collection_signin_back"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/add_files_to_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="15dp"
        android:outlineSpotShadowColor="@color/black"
        app:cardElevation="50dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="#1D034A"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="20dp"
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semester"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/semesterSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:elevation="10dp"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/one"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/one"
                app:layout_constraintTop_toTopOf="@+id/one" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/one" />
            <TextView
                android:textColor="#1D034A"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="20dp"
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/one"
                />

            <androidx.appcompat.widget.AppCompatSpinner
                android:backgroundTint="@color/black"
                android:elevation="10dp"
                android:id="@+id/subjectSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/two"
                app:layout_constraintEnd_toEndOf="@+id/semesterSpinner"
                app:layout_constraintStart_toStartOf="@+id/semesterSpinner"
                app:layout_constraintTop_toTopOf="@+id/two" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/two" />
            <TextView
                android:textColor="#1D034A"
                android:textSize="15sp"
                android:textStyle="bold"
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/chapter"
                app:layout_constraintBottom_toBottomOf="@id/newChapter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/chapterSpinner" />

            <Button
                android:id="@+id/deleteChapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#B60404"
                android:text="Delete"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/three"
                app:layout_constraintStart_toStartOf="@+id/three"
                app:layout_constraintTop_toBottomOf="@+id/three" />
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/chapterSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/black"
                android:padding="20dp"
                android:maxWidth="125dp"
                app:layout_constraintEnd_toEndOf="@+id/semesterSpinner"
                app:layout_constraintStart_toStartOf="@+id/semesterSpinner"
                app:layout_constraintTop_toBottomOf="@+id/two" />

            <TextView
                android:layout_margin="10dp"
                android:id="@+id/or"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/semesterSpinner"
                app:layout_constraintStart_toStartOf="@+id/semesterSpinner"
                app:layout_constraintTop_toBottomOf="@id/chapterSpinner"
                android:text="@string/or_add_new_chapter"
                android:padding="10dp"
                />

            <EditText
                android:inputType="textMultiLine"
                android:autofillHints="name"
                android:id="@+id/newChapter"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginTop="5dp"
                android:background="#F8F8F8"
                android:elevation="4dp"
                android:hint="@string/chapter_name_here"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="#939495"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/semesterSpinner"
                app:layout_constraintStart_toStartOf="@+id/semesterSpinner"
                app:layout_constraintTop_toBottomOf="@id/or" />

            <View
                android:id="@+id/bo"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deleteChapter" />

            <ProgressBar
                android:id="@+id/chapterBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintBottom_toBottomOf="@+id/or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/or"
                app:layout_constraintTop_toTopOf="@+id/or" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/any_item_back"
                android:padding="7dp"
                android:textStyle="bold"
                android:text="@string/delete_pdf_section"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/bo"
                app:layout_constraintStart_toStartOf="@+id/bo"
                app:layout_constraintTop_toBottomOf="@+id/bo" />

            <androidx.appcompat.widget.AppCompatSpinner

                android:id="@+id/pdfSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:backgroundTint="@color/black"
                android:layout_marginTop="5dp"
                android:padding="20dp"
                app:layout_constraintStart_toStartOf="@+id/bo"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <ProgressBar

                android:id="@+id/pdfBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/pdfSpinner"
                app:layout_constraintStart_toEndOf="@+id/pdfSpinner"
                app:layout_constraintTop_toTopOf="@+id/pdfSpinner" />

            <Button
                android:id="@+id/deletePdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#B60404"
                android:text="Delete"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/newChapter"
                app:layout_constraintTop_toTopOf="@+id/pdfSpinner" />
            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="3dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pdfSpinner" />

            <EditText
                android:inputType="textMultiLine"
                android:autofillHints="name"
                android:id="@+id/pdfTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/addfile"
                android:elevation="6dp"
                android:hint="@string/enter_pdf_title_here"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <EditText
                android:inputType="textMultiLine"
                android:elevation="6dp"
                android:id="@+id/pdfUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/addfile"
                android:hint="@string/paste_pdf_url_here"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pdfTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:elevation="5dp"
        android:fontFamily="@font/arimo_bold"
        android:padding="14dp"
        android:text="@string/warning"
        android:textColor="#F40000"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:backgroundTint="@color/black"
        android:elevation="40dp"
        android:id="@+id/upload"
        android:text="@string/upload"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/submitBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>